feat: added icons to navigation sidebar; dropped MathLive landing page; reorganized mathlive onboarding

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -6,7 +6,7 @@ layout: single
 date: 2021-06-24
 ---
 <section>
-<h1 class="font-size-2xl">About Us</h1>
+<h1 class="font-size-2xl">Hello!</h1>
 <div class='hero-container' style='float:right'>
 <picture class='hero'>
   <img src="../assets/images/arno-memoji-coding.jpeg" alt="Portrait of Arno">
@@ -15,32 +15,30 @@ date: 2021-06-24
 
 <div class='max-w-4xl mt-lg'>
 
-<p><strong>Hello!</strong></p>
+  <p>I built my first commercial app for the Mac in 1984. WinMath was one of the first 
+    graphing calculator for modern computers.</p>
 
-<p>I built my first commercial app for the Mac in 1984. WinMath was one of the first 
-  graphing calculator for modern computers.</p>
+  <p>After that my professional career took lots of
+    interesting twists and turns: I worked at Apple for 10 years bringing the 
+    Mac OS X UI to life, then at Adobe building tools for creative professionals.</p>
 
-<p>After that my professional career took lots of
-  interesting twists and turns: I worked at Apple for 10 years bringing the 
-  Mac OS X UI to life, then at Adobe building tools for creative professionals.</p>
+  <p>Now I'm applying everything I've learned and returning where it all began: 
+    with CortexJS I'm building a suite of modern tools for scientific computing,
+    including <a href="/mathLive/">MathLive</a>, a web component for beautifully 
+    typeset math equations 
+    and the <a href="/compute-engine/">Compute Engine</a> to perform symbolic computing and numerical 
+    evaluations in JavaScript environments.
+  </p>
 
-<p>Now I'm applying everything I've learned and returning where it all began: 
-  with CortexJS I'm building a suite of modern tools for scientific computing,
-  including <a href="/mathLive/">MathLive</a>, a web component for beautifully 
-  typeset math equations 
-  and the <a href="/compute-engine/">Compute Engine</a> to perform symbolic computing and numerical 
-  evaluations in JavaScript environments.
-</p>
+  <p>All the Cortex components are available under an Open Source license.</p>
 
-<p>All the Cortex components are available under an Open Source license.</p>
+  <p>I can’t wait to see what you will do with them. Enjoy!</p>
 
-<p>I can’t wait to see what you will do with them. Enjoy!</p>
-
-<p>—Arno Gourdol<br>
-<a href='https://www.linkedin.com/in/arnog'><i class="fab fa-linkedin"></i></a>
-<a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
-<a href='mailto:arno@arno.org'><i class="far fa-envelope"></i></i></a>
-</p>
+  <p>—Arno Gourdol<br>
+  <a href='https://www.linkedin.com/in/arnog'><i class="fab fa-linkedin"></i></a>
+  <a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
+  <a href='mailto:arno@arno.org'><i class="far fa-envelope"></i></i></a>
+  </p>
 
 </div>
 
