--- a/src/_pages/guides-math-json-redirect.html
+++ b/src/_pages/guides-math-json-redirect.html
@@ -6,4 +6,6 @@ head:
   redirect: https://cortexjs.io/math-json/
 ---
 
-<a href="https://cortexjs.io/math-json/">The MathJSON Format</a>
+<div style="display: flex; align-items:center; justify-content:center; width:100%; height: 60vh; font-size: 2em">
+  <a href="https://cortexjs.io/math-json/">The MathJSON Format</a>
+</div>
