--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -135,7 +135,6 @@ head:
     border: 1px solid #ddd;
     background: #fdfdfd;
     width: 100%;
-    margin-right: .5em;
     overflow-x: auto;
     overflow-x: overlay;
   }
@@ -160,6 +159,8 @@ head:
   }
 
   button.toggle {
+    display: flex;
+    align-items: center;
     appearance: none;
     border: none;
     background: none;
@@ -167,6 +168,7 @@ head:
     width: 36px;
     height: 36px;
     color: #777;
+    margin-left: 8px;
   }
   button.toggle:hover, button.toggle:active {
     background: #dadada;
@@ -190,10 +192,11 @@ head:
 
   .output-section.is-visible { display: block; }
   .output-section { display: none; margin-bottom: 1em;} 
-  .output-section.is-visible .mathjson {
+  
+  .toggle-field {
     display: none;
   }
-  .output-section.is-visible .mathjson.is-visible {
+  .toggle-field.is-visible {
     display: block;
   }
 
@@ -201,7 +204,7 @@ head:
     display: flex;
     width: 100%;
     margin: 0 auto;
-    font-size: 1rem;
+    font-size: .75rem;
     font-family: var(--system);
     font-weight: 600;
     border: 1px solid #ddd;
@@ -242,6 +245,10 @@ head:
     background: #dadada;
   }
 
+  code.label {
+    width: 270px;
+  }
+
 </style>
 
   <svg xmlns="http://www.w3.org/2000/svg" style='display:none'>
@@ -254,36 +261,41 @@ head:
   <h1>CortexJS Compute Engine Demo</h1>
 
   <main id="main" class="container">
-    <div class='row'>
-      <div id='input-label'><code>f = </code></div>
-      <math-field id="mf" class="mathfield" tabindex="0" virtual-keyboard-mode="manual">
-        <!-- 2+3.001 -->
-        e^{i\pi}
-        <!-- 1 + 2 + 3.001 -->
-        <!-- \frac{5+3i}{2} -->
-        <!-- \frac{6}{2}+\frac{3i}{2} -->
-        <!-- \frac{3+2i}{2} -->
-        <!-- 2(-i)+i  -->
-        <!-- \frac{6}{2}+\frac{3\imaginaryI}{2} -->
 
-        <!-- \frac{6 + 3\imaginaryI}{2} -->
-        <!-- 0x^2 + 4x  + 2x + 2(x-1) + b(x - 1) -->
-      <!-- \operatorname{NonNegativeRealNumber} -->
-      <!-- -\frac{50}{70}+\operatorname{GoldenRatio} -->
-      <!-- 3 (2x + 1) + \frac{x}{2} + \frac{3x}{2} + 4\frac{x}{2} -->
-      <!-- \sqrt{1}[3] -->
-      <!-- \sin(x -->
-      <!-- x=\frac{-b\pm\sqrt{b^2-4ac}} {2a} -->
-      <!-- 2^3^4 -->
-      <!-- \sqrt{1}[3] -->
-      <!-- = should produce error or Missing = Missing ->
-      <!-- x=\frac{-b\pm \sqrt{b^2-4ac}}{2a} -->
-      <!-- (b^3c^2d)(x^7y)(a^5f)(b^2x^5b3) -->
-      <!-- {}_3^2 -->
-    </math-field>
+    <div id="input">
+      <div class='row'>
+        <code class="label">f = </code>
+        <math-field id="mf" class="mathfield" tabindex="0" virtual-keyboard-mode="manual">
+          <!-- 2+3.001 -->
+          e^{i\pi}
+          <!-- 1 + 2 + 3.001 -->
+          <!-- \frac{5+3i}{2} -->
+          <!-- \frac{6}{2}+\frac{3i}{2} -->
+          <!-- \frac{3+2i}{2} -->
+          <!-- 2(-i)+i  -->
+          <!-- \frac{6}{2}+\frac{3\imaginaryI}{2} -->
 
+          <!-- \frac{6 + 3\imaginaryI}{2} -->
+          <!-- 0x^2 + 4x  + 2x + 2(x-1) + b(x - 1) -->
+        <!-- \operatorname{NonNegativeRealNumber} -->
+        <!-- -\frac{50}{70}+\operatorname{GoldenRatio} -->
+        <!-- 3 (2x + 1) + \frac{x}{2} + \frac{3x}{2} + 4\frac{x}{2} -->
+        <!-- \sqrt{1}[3] -->
+        <!-- \sin(x -->
+        <!-- x=\frac{-b\pm\sqrt{b^2-4ac}} {2a} -->
+        <!-- 2^3^4 -->
+        <!-- \sqrt{1}[3] -->
+        <!-- = should produce error or Missing = Missing ->
+        <!-- x=\frac{-b\pm \sqrt{b^2-4ac}}{2a} -->
+        <!-- (b^3c^2d)(x^7y)(a^5f)(b^2x^5b3) -->
+        <!-- {}_3^2 -->
+      </math-field>
+      <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
+    </div>
+    <div id='mathfield-latex' class="output toggle-field"></div>
   </div>
-    <!-- 2{xy}     1+|a+|2|+b| -->
+
+  <!-- 2{xy}     1+|a+|2|+b| -->
     <!-- ,c,b -->
     <!-- a,c, -->
     <!-- a,, c -->
@@ -330,8 +342,7 @@ head:
     </div> -->
 
     <div>
-      <h2>Assumptions</h2>
-      <div id=assumptions></div>
+      Assumptions: <span id=assumptions></span>
     </div>
 
 
@@ -344,45 +355,49 @@ head:
     </div> -->
 
     <div class="output-section" id="json-form">
-      <h2><code>format(f, ['json'])</code></code></h2>
+      <h2><code class="label">format(f, ['json'])</code></code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
       </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
     <div class="output-section" id="canonical-form">
-      <h2><code>canonical(f)</code></h2>
       <div class='row'>
+        <code class="label">canonical(f)&nbsp;=&nbsp;</code>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
       </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
     <div class="output-section" id="domain">
-      <h2><code>domain(f)</code></h2>
       <div class='row'>
+        <code class="label">domain(f)&nbsp;=&nbsp;</code>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
       </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
 
     <div class="output-section" id="simplify">
-      <h2><code>simplify(f)</code></h2>
       <div class='row'>
+        <code class="label">simplify(f)&nbsp;=&nbsp;</code>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
       </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
 
     <div class="output-section" id="evaluate-numerically">
-      <h2><code>N(f)</code></h2>
+      <div class='row'>
+        <code class="label">N(f)&nbsp;=&nbsp;</code>
+        <div class="latex"></div>
+        <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
+      </div>
       <div class='row'>
         <div class="segmented-control" style="--segments: 4">
           <input type="radio" name="numeric-format" value="auto" id="numeric-format-auto" checked />
@@ -395,27 +410,23 @@ head:
           <label for="numeric-format-complex">complex</label>
         </div>
       </div>
-      <div class='row'>
-        <div class="latex"></div>
-        <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
-      </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
     <div class="output-section" id="evaluate">
-      <h2><code>evaluate(f)</code></h2>
       <div class='row'>
+        <code class="label">evaluate(f)&nbsp;=&nbsp;</code>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
       </div>
-      <div class="output mathjson"></div>
+      <div class="output mathjson toggle-field"></div>
     </div>
 
   </main>
 
 
   <footer class="page__meta">
-    <strong><i class="fas fa-fw fa-code-branch" aria-hidden="true"></i>Compute Engine version: </strong> <span id='compute-engine-version'></span>
+    <strong><i class="fas fa-fw fa-code-branch" aria-hidden="true"></i>Compute Engine version </strong> <span id='compute-engine-version'></span>
   </footer>
 
 
@@ -424,7 +435,7 @@ head:
       'https://unpkg.com/mathlive/dist/mathlive.min.mjs';
     import {
       LatexSyntax, parse, serialize, ComputeEngine, match, version
-    } from 'https://unpkg.com/@cortex-js/compute-engine/dist/compute-engine.esm.js';
+    } from 'https://unpkg.com/@cortex-js/compute-engine/dist/compute-engine.min.esm.js';
 
     document.getElementById('compute-engine-version').innerText = version;
 
@@ -511,10 +522,12 @@ head:
 
     async function updateContent(mf) {
       const latex = mf.getValue('latex-expanded');
+
+
       let expr;
       try {
 
-        const latexEl = document.getElementById('latex')
+        const latexEl = document.getElementById('mathfield-latex')
         if (latexEl) latexEl.innerHTML = escapeHtml(latex);
 
         if (document.getElementById('asciimath')) {
@@ -638,6 +651,7 @@ head:
     }
 
     [
+      'input',
       'json-form', 
       'canonical-form', 
       'domain', 
@@ -649,7 +663,7 @@ head:
         const toggle = el.querySelector('.toggle');
         toggle.addEventListener('click', () => {
           toggle.classList.toggle('is-on');
-          toggleVisibility(el.querySelector('.mathjson'));
+          toggleVisibility(el.querySelector('.toggle-field'));
         });
       }
     });
@@ -690,13 +704,11 @@ head:
       ce.assume(['Equal','a', 1]);
 
     document.getElementById('assumptions').innerHTML = 
-      '<ul><li>' + 
        [...ce.assumptions].map(([assumption, val]) => { 
          return convertLatexToMarkup(defaultLatex.serialize(assumption)) + 
           '<span>' + (val ?  '': ' is false') + '</span>'
         }
-      ).join('</li><li>') +
-      '</li></ul>'
+      ).join(',  ') 
     }
 
 
