doc: more consistent font usage (IBM Plex Sans), load code-playground.min.js, and only when needed

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -7,7 +7,7 @@ sidebar:
     - nav: "mathlive"
 head:
   modules:
-    - /assets/js/code-playground.js
+    - /assets/js/code-playground.min.js
   stylesheets:
     - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.css
   scripts:
