--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@ read_time: false
       </p>
     </div>
     <div class="figure">
-      <img src="/assets/MathJSON-1.png">
+      <img src="/assets/MathJSON-1.jpg">
     </div>
   </section> -->
 
@@ -54,7 +54,7 @@ read_time: false
               class="fas fa-chevron-right navigation"></i></span></a></p>
     </div>
     <div class="figure">
-      <img alt="Compute Engine Logo" src="/assets/Compute-Engine-2.png">
+      <img alt="Compute Engine Logo" src="/assets/Compute-Engine-2.jpg">
     </div>
   </section>
 
@@ -65,7 +65,7 @@ read_time: false
       <p><strong>Coming soon.</strong></p>
     </div>
     <div class="figure">
-      <img alt="Visual Toolkit Logo" src="/assets/visual-toolkit-1.png">
+      <img alt="Visual Toolkit Logo" src="/assets/visual-toolkit-1.jpg">
     </div>
   </section>
 
