--- a/src/404.html
+++ b/src/404.html
@@ -1,25 +1,31 @@
 ---
-layout: default
 permalink: 404.html
+layout: single
 ---
 
 <style type="text/css" media="screen">
-    .container {
-        margin: 10px auto;
-        max-width: 600px;
-        text-align: center;
-    }
-    h1 {
-        margin: 30px 0;
-        font-size: 4em;
-        line-height: 1;
-        letter-spacing: -1px;
-    }
+  .container {
+    display: block;
+  }
+  h1 {
+    margin: 0;
+    font-size: 4.5em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+  img {
+    float: right;
+    margin-top: 27px;
+    width: 100%;
+    height: 100%;
+    max-width: 421px;
+    shape-outside: url(../assets/images/arno-memoji-shrug.png);
+    shape-margin: 12px;
+
+  }
 </style>
 
-<div id="main" class="container">
-    <h1>404</h1>
-
-    <p><strong>Page not found :(</strong></p>
-    <p>The requested page could not be found.</p>
+<div class="container">      
+  <img src="../assets/images/arno-memoji-shrug.png" alt="Arno Shrugging">
+  <h1>The page you’re looking for can’t be found.</h1>
 </div>
