--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -5,9 +5,11 @@ layout: single
 date: Last Modified
 sidebar:
     - nav: "compute-engine"
+version: Compute Engine version
 head:
   stylesheets:
     - https://unpkg.com/mathlive/dist/mathlive-static.css
+
 ---
 
 <style>
@@ -453,10 +455,6 @@ head:
   </main>
 
 
-  <footer class="page__meta">
-    <strong><i class="fas fa-fw fa-code-branch" aria-hidden="true"></i>Compute Engine version </strong> <span id='compute-engine-version'></span>
-  </footer>
-
 
   <script type="module">
     import { convertLatexToMarkup } from 
@@ -465,7 +463,7 @@ head:
       LatexSyntax, parse, serialize, ComputeEngine, match, version
     } from 'https://unpkg.com/@cortex-js/compute-engine/dist/compute-engine.min.esm.js';
 
-    document.getElementById('compute-engine-version').innerText = version;
+    document.getElementById('version').innerText = version;
 
     const MAX_LINE_LENGTH = 64;
 
