fix: correctly display the graphics in the 404 page even if the original url had multiple sub-directories in its path

--- a/src/404.html
+++ b/src/404.html
@@ -1,6 +1,8 @@
 ---
 permalink: 404.html
 layout: single
+eleventyExcludeFromCollections: true
+ignore: true
 ---
 
 <style type="text/css" media="screen">
@@ -19,13 +21,13 @@ layout: single
     width: 100%;
     height: 100%;
     max-width: 421px;
-    shape-outside: url(../assets/images/arno-memoji-shrug.png);
+    shape-outside: url(/assets/images/arno-memoji-shrug.png);
     shape-margin: 12px;
 
   }
 </style>
 
 <div class="container">      
-  <img src="../assets/images/arno-memoji-shrug.png" alt="Arno Shrugging">
+  <img src="/assets/images/arno-memoji-shrug.png" alt="Arno Shrugging">
   <h1>The page you’re looking for can’t be found.</h1>
 </div>
