doc: consistent spelling of LaTeX

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -9,7 +9,7 @@ date: 2021-06-24
 <h1 class="font-size-2xl">Hello!</h1>
 <div class='hero-container' style='float:right'>
 <picture class='hero'>
-  <img src="../assets/images/arno-memoji-coding.jpeg" alt="Portrait of Arno">
+  <img src="/assets/images/arno-memoji-coding.jpeg" alt="Portrait of Arno">
 </picture>
 </div>
 
