--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -92,10 +92,10 @@ head:
   <h2>Customizable</h2>
   <section class="fullwidth">
     <div class='copy'>
-      <p>You can paste in MathASCII or Latex, and get back those formats or an 
+      <p>You can paste in MathASCII or LaTeX, and get back those formats or an 
         easy to parse <a href="/math-json">MathJSON object</a> representing an Abstract Syntax Tree of 
         the formula.</p>
-      <p>A <a href="/docs/mathlive/">comprehensive API</a> is available and many options are customizable, from you own dictionary of Latex macros,
+      <p>A <a href="/docs/mathlive/">comprehensive API</a> is available and many options are customizable, from you own dictionary of LaTeX macros,
         custom inline shortcuts, custom virtual keyboards and more.</p>
     </div>
     <div class="figure">
