chore: use readmore shortcode

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -74,7 +74,9 @@ head:
       <img src='/assets/images/mathfield/loop-eqn.png'>
     </div>
   </section>
-  <div class='read-more'><a href="/mathlive/reference/commands/">Read more about the <strong>LaTeX commands</strong> supported by MathLive<svg class="svg-chevron" ><use xlink:href="#svg-chevron"></use></svg></a></div>
+  {% readmore "/mathlive/reference/commands/" %}
+Read more about the <strong>LaTeX commands</strong> supported by MathLive
+{% endreadmore %}
 
   <h2>For Anyone. Anywhere.</h2>
   <section class="fullwidth">
@@ -87,7 +89,9 @@ head:
     </div>
   </section>
 
-  <div class='read-more'><a href="/mathlive/guides/speech/">Read more about the <strong>text to speech engine</strong><svg class="svg-chevron" ><use xlink:href="#svg-chevron"></use></svg></a></div>
+  {% readmore "/mathlive/guides/speech/" %}
+Read more about the <strong>text to speech engine</strong>
+{% endreadmore %}
 
   <h2>Customizable</h2>
   <section class="fullwidth">
@@ -103,7 +107,9 @@ head:
     </div>
   </section>
 
-  <div class='read-more'><a href="/mathlive/guides/customizing/">Read more about  <strong>customizing a mathfield</strong><svg class="svg-chevron" ><use xlink:href="#svg-chevron"></use></svg></a></div>
+  {% readmore "/mathlive/guides/customizing/" %}
+Read more about  <strong>customizing a mathfield</strong>
+{% endreadmore %}
 
   <h2>Intuitive Editing</h2>
   <section class="fullwidth">
@@ -117,7 +123,9 @@ head:
     </div>
   </section>
 
-  <div class='read-more'><a href="/mathlive/guides/virtual-keyboards/">Read more about the <strong>virtual keyboard</strong><svg class="svg-chevron" ><use xlink:href="#svg-chevron"></use></svg></a></div>
+  {% readmore "/mathlive/guides/virtual-keyboards/" %}
+Read more about the <strong>virtual keyboard</strong>
+{% endreadmore %}
 
   <h2>Easy as π</h2>
   <section class="fullwidth">
@@ -129,7 +137,9 @@ head:
     </div>
   </section>
 
-  <div class='read-more'><a href="/mathlive/reference/keybindings/">Read more about <strong>keybindings and inline shortcuts</strong><svg class="svg-chevron" ><use xlink:href="#svg-chevron"></use></svg></a></div>
+  {% readmore "/mathlive/reference/keybindings/" %}
+Read more about <strong>keybindings and inline shortcuts</strong>
+{% endreadmore %}
 
 
 </section>
