feat: light grey background page

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -39,6 +39,7 @@ date: 2021-06-24
   <a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
   <a href='mailto:arno@arno.org'><i class="far fa-envelope"></i></i></a>
   </p>
+  <p>My Erdős number is 4.</p>
 
 </div>
 
