--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -33,7 +33,8 @@ head:
 }
 </style>
 
-<img alt="MathLive" src='/assets/mathlive-1.png' style='margin-bottom:2em; border-radius:8px; border:1px solid #203346'>
+<img alt="MathLive" class='full-width' src='/assets/mathlive-1.png' 
+style='margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346'>
 
 
 <h1>A Web Component for Math Input</h1>
