--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -40,8 +40,8 @@ style='margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346'>
 <h1>A Web Component for Math Input</h1>
 
 
-<section class='m-lg mb-xl w-full-lg max-w-2xl'>
-<code-playground layout="stack" class="m-lg w-full-lg">
+<section class='m-lg mb-xl max-w-2xl'>
+<code-playground layout="stack">
   <style slot="style">
     .output:focus-within {
       outline: Highlight auto 1px;
